<resources>
    <string name="app_name">PhiChartRender</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <!-- Strings used for fragment navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nisl velit,
        in rutrum arcu ullamcorper sit amet. Proin a odio sollicitudin, commodo arcu eget,
        ultricies est. Sed sed mollis purus, eget viverra odio. Mauris ac justo at ex blandit
        dignissim. Sed condimentum, libero ut iaculis iaculis, risus nunc feugiat neque, sit amet
        dictum risus est ac ex. Integer rutrum ultrices quam at pulvinar. Nullam euismod sem eget
        turpis pellentesque, in porta mauris egestas. Nulla facilisi.\n\n
        Phasellus ultricies dignissim dolor, ac blandit tellus lacinia ac. Nunc lobortis, nibh in
        pulvinar tempor, turpis lectus imperdiet neque, sit amet malesuada quam lectus et purus.
        Vestibulum volutpat est non orci aliquam, in tincidunt risus viverra. Suspendisse quis
        molestie lorem. Vivamus et nisl vehicula, fermentum nunc eget, gravida ipsum. Nam tincidunt
        iaculis ante, in bibendum enim ultrices sit amet. Sed imperdiet pharetra orci, eu vestibulum
        justo lacinia eget. Pellentesque tempor, risus ac dignissim malesuada, sem sem venenatis
        magna, eget tincidunt odio massa vitae justo. In ullamcorper mollis viverra. Integer
        porttitor, metus ac viverra hendrerit, mauris justo tincidunt nisl, eget tincidunt lectus
        magna sed lectus. Curabitur at metus in nisl faucibus egestas.\n\n
        Donec cursus, enim et hendrerit placerat, leo mauris aliquam mauris, sed efficitur tellus
        justo quis nisl. Nam tempor risus in ultricies sollicitudin. Duis lectus nisl, vestibulum
        eget massa nec, tincidunt hendrerit mauris. Nulla facilisi. Nullam at mauris euismod,
        bibendum enim nec, viverra nisl. Sed dapibus tortor eget odio dapibus, at ultricies neque
        imperdiet. Nulla auctor varius purus, eget tristique sem interdum at. In hac habitasse
        platea dictumst. Phasellus quis tempor est. Donec nec massa vel tellus condimentum egestas.
        Donec eu erat molestie, faucibus metus eu, dignissim lorem. Nunc in malesuada nisl.
    </string>
    
    <string name="server_started_title">Server Started</string>
    <string name="dark_mode">Theme</string>
    <string name="dark_mode_summary">Select app theme</string>
    <string name="language">Language</string>
    <string name="language_summary">Change the application language</string>
    <string name="general_settings">General Settings</string>
    <string name="archive_settings">Archive Settings</string>
    <string name="manage_archives">Manage Archives</string>
    <string name="manage_archives_summary">Manage downloaded chart archives</string>
    
    <string name="open_webview">Open WebView</string>
    <string name="close">Close</string>
    
    <string name="chart_settings">Chart Display</string>
    <string name="chart_smoothness">Chart Smoothness</string>
    <string name="chart_smoothness_summary">Adjust the smoothness of chart lines</string>
    <string name="show_grid">Show Grid</string>
    <string name="show_grid_summary">Display grid lines on charts</string>
    
    <!-- Download settings -->
    <string name="download_settings">Download Settings</string>
    <string name="download_acceleration">Download Acceleration</string>
    <string name="download_acceleration_summary">Enable download acceleration for better speed in China</string>
    <string name="acceleration_source">Acceleration Source</string>
    <string name="acceleration_source_summary">Select the acceleration service provider</string>
    
    <!-- Version select string -->
    <string name="version_select">Select Version:</string>
</resources>