<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings">

        <ListPreference
            app:key="dark_mode"
            app:title="@string/dark_mode"
            app:summary="@string/dark_mode_summary"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/download_settings">
        
        <SwitchPreferenceCompat
            app:key="download_acceleration"
            app:title="@string/download_acceleration"
            app:summary="@string/download_acceleration_summary"
            app:defaultValue="false" />
            
        <ListPreference
            app:key="acceleration_source"
            app:title="@string/acceleration_source"
            app:summary="@string/acceleration_source_summary"
            app:entries="@array/acceleration_sources"
            app:entryValues="@array/acceleration_sources_values"
            app:defaultValue="ghfast.top"
            app:dependency="download_acceleration" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/archive_settings">

        <Preference
            app:key="manage_archives"
            app:title="@string/manage_archives"
            app:summary="@string/manage_archives_summary" />

    </PreferenceCategory>

</PreferenceScreen>